# milkv-duo-s-freertos

./: .config  CMakeLists.txt  README.md  toolchain-riscv64-elf.cmake
arduion/: CMakeLists.txt
arduion/src/: Main.cpp  common.h
arduion/src/bsp/drivers/: csi_common.c  cvi_mailbox.c
arduion/src/bsp/hal/dw/: dw_uart_ll.h
arduion/src/bsp/startup/: interrupt.c
arduion/src/duo/: variant_soc.h
cvitek/arch/: CMakeLists.txt
cvitek/arch/riscv64/include/: csi_rv64_gcc.h
cvitek/common/: CMakeLists.txt
cvitek/driver/: CMakeLists.txt
cvitek/driver/uart/src/: uart.c
cvitek/hal/cv181x/config/: intr_conf.h
cvitek/hal/cv181x/snsr_i2c/src/: cvi_i2cm.c
cvitek/hal/cv181x/uart/include/: hal_uart_dw.h
cvitek/kernel/: CMakeLists.txt
cvitek/scripts/: cv181x_lscript.ld  cvi_board_memmap.conf  cvi_board_memmap.h  cvi_board_memmap.ld
cvitek/task/: CMakeLists.txt
cvitek/task/comm/: CMakeLists.txt
cvitek/task/comm/src/riscv64/: comm_main.c
cvitek/task/main/: CMakeLists.txt
cvitek/task/main/src/: main.c  main.cpp
cvitek/task/rgn/: CMakeLists.txt
cvitek_extra/: CMakeLists.txt
cvitek_extra/include/: misc.h
cvitek_extra/include/csi/: csi_adc.h  csi_pin.h  csi_riscv_gcc.h
cvitek_extra/include/hal/dw/: dw_gpio_ll.h  dw_iic_ll.h  dw_uart_ll.h
cvitek_extra/src/bsp/: time.c
cvitek_extra/src/bsp/drivers/: csi_gpio.c  csi_gpio_pin.c  csi_iic.c  csi_uart.c  cvi_mailbox.c
cvitek_extra/src/bsp/hal/: hal_dma.c
cvitek_extra/src/bsp/startup/: interrupt.c  tick.c
tools/burntools/burn/: burnd
tools/burntools/burntool/: arduino.elf
